--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
                             <a class="nav-link" href="/code.html">The Code</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="https://github.com/Tsoc12">The Repo</a>
+                            <a class="nav-link" href="https://github.com/Tsoc12/CrucibleHundo">The Repo</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link" href="https://github.com/Tsoc12">About</a>
@@ -67,9 +67,9 @@
     <main class="container">
         <div class="row row-cols-1 gy-3 py-3 row-cols-md-2 h-100 align-items-center">
             <div class="col">
-                <h1 class="display-5">APP NAME: CODING CHALLANGE</h1>
-                <h4 class="lead">PROJECT DESRIPTION CHANGE ME </h4>
-                <ul class="checklist">
+                <h1 class="display-5">Hundo</h1>
+                <h4 class="lead">Live life one loop at a time! Hundo is a JavaScript excercise using loops. </h4>
+                <ul class="checklist text-start mx-auto">
                     <li>
                         <i class="bi bi-check-square-fill"></i>
                         <span>CSS and Bootstrap Layout</span>
@@ -101,7 +101,7 @@
                 </div>
             </div>
             <div class="col d-flex order-first order-md-last">
-                <img src="img/APPNAMELogo.svg" class="img-fluid appLogo" alt="APP Name Logo">
+                <img src="img/hundo.png" class="img-fluid appLogo" alt="APP Name Logo">
             </div>
         </div>
 
