added block for when someone adds text to input box

--- a/code.html
+++ b/code.html
@@ -119,10 +119,13 @@ function displayNumbers(numbers){ // [0, 1, 2, 3. ..., 100]
                 </pre>
             </div>
             <div class="col-lg-4 col-12">
-                <p> In the first function getValue I used the getElementById to get numbers from the user. 
-                    I also used the parseInt function becuase whatever number the user submits would be a string so i needed to convert it to a integer.</p>
-                <h5>In the generateNumbers function that gets the number and returns them in the basketOfNumber function. </h5>
-                <p>The function displayNumber is used to to print all the number that are in the range of numbers the user put in. It makes all even number print bold and the color red.</p>
+                <p> In the first function getValue I used the getElementById to get numbers from the user.
+                    I also used the parseInt function becuase whatever number the user submits would be a string so i
+                    needed to convert it to a integer.</p>
+                <h5>In the generateNumbers function that gets the number and returns them in the basketOfNumber
+                    function. </h5>
+                <p>The function displayNumber is used to to print all the number that are in the range of numbers the
+                    user put in. It makes all even number print bold and the color red.</p>
             </div>
         </div>
 
